# ArrayMorph

./: .actrc  .gitignore  CHANGELOG.md  CONAN-INTEGRATION.md  Dockerfile  Dockerfile.conan-lock  README.md  env-example.txt  justfile  main.py  pyproject.toml  release.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml
.github/issue_template/: bug_report.yaml
.github/workflows/: build-lib_array_morph-and-pypi-package.yaml  build-shared-lib.yaml  build.yaml  build.yml  conan-lock-test.yaml
arraymorph/: CMakeLists.txt  README.md  activate.sh  build.sh  justfile  meta.yaml
arraymorph/include/arraymorph/core/: constants.h
arraymorph/include/arraymorph/s3vl/: dataset_obj.h  vol_connector.h
arraymorph/scripts/: extract_perspective.py
arraymorph/src/: CMakeLists.txt  constants.cc  constants.h  operators.cc  operators.h  s3vl_chunk_obj.cc  s3vl_dataset_obj.cc  s3vl_dataset_obj.h  s3vl_file_callbacks.cc  s3vl_initialize.h  utils.cc
arraymorph/src/core/: operators.cc
arraymorph/src/s3vl/: chunk_obj.cc  file_callbacks.cc  group_callbacks.cc
arraymorph_channel/linux-64/: arraymorph-0.2.0-py312_0.conda  arraymorph-1.0.0-py312_0.conda
examples/python/: write.py
lib/: .clangd  CMakeLists.txt  README.md  conanfile.py  deactivate.sh  justfile  vcpkg.json
lib/include/arraymorph/core/: constants.h  logger.h  operators.h  utils.h
lib/include/arraymorph/s3vl/: chunk_obj.h  dataset_callbacks.h  file_callbacks.h  group_callbacks.h  initialize.h
lib/src/: CMakeLists.txt
lib/src/core/: constants.cc  utils.cc
lib/src/s3vl/: dataset_callbacks.cc  dataset_obj.cc  file_callbacks.cc  vol_connector.cc
scripts/: hdf5_loaded.py  show_hdf5_dir.py
src/arraymorph/: __init__.py
