[build-system]
requires = ["scikit-build-core>=0.11", "cmake>=3.20", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "arraymorph"
version = "0.2.0"
description = "HDF5 VOL connector for cloud object storage (AWS S3, Azure Blob)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ruochenj123, wangtg2013" }]

requires-python = ">=3.10"

# Important: pin h5py, because this package is intentionally coupled
# to h5py's bundled HDF5 at runtime.
dependencies = ["h5py>=3.10,<3.16"]

[project.urls]
Homepage = "https://github.com/ICICLE-ai/ArrayMorph"
Repository = "https://github.com/ICICLE-ai/ArrayMorph"
Issues = "https://github.com/ICICLE-ai/ArrayMorph/issues"

# Replace the existing [tool.cibuildwheel] section in your pyproject.toml with this:

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
test-command = "python -c 'import arraymorph; print(\"ok\")'"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

before-all = [
  # manylinux_2_28 is AlmaLinux 8 based — uses dnf, not apt
  "dnf install -y epel-release",
  "dnf install -y perl perl-IPC-Cmd ca-certificates patchelf ninja-build",
  # X11/xcb deps — only add back if the build actually fails without them
  # "dnf install -y libX11-devel libxcb-devel ...",
]

before-build = [
  "pip install 'conan>=2,<3' 'h5py>=3.10,<3.16' scikit-build-core setuptools-scm",
  "conan profile detect --force",
  "conan lock create {package}/lib -s build_type=Release --lockfile-out={package}/lib/conan.lock",
  "conan install {package}/lib --lockfile={package}/lib/conan.lock --build=missing -of {package}/lib/build -c tools.system.package_manager:mode=install -c tools.system.package_manager:sudo=True",
]

environment = { CMAKE_TOOLCHAIN_FILE = "/project/lib/build/build/Release/generators/conan_toolchain.cmake" }

repair-wheel-command = [
  "H5PY_LIBS=$(python -c \"import h5py, os; d=os.path.dirname(h5py.__file__); libs=os.path.join(os.path.dirname(d),'h5py.libs'); print(libs)\")",
  "LD_LIBRARY_PATH=$H5PY_LIBS:$LD_LIBRARY_PATH auditwheel repair {wheel} -w {dest_dir} --exclude libhdf5.so --exclude libhdf5.so.310 --exclude libhdf5_hl.so --exclude libhdf5_hl.so.310",
]
