[build-system]
requires = ["scikit-build-core>=0.11", "cmake>=3.20", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "arraymorph"
version = "0.2.0"
description = "HDF5 VOL connector for cloud object storage (AWS S3, Azure Blob)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ruochenj123, wangtg2013" }]
requires-python = ">=3.10"

# h5py provides the HDF5 shared library at runtime.
# Pin to versions that ship HDF5 1.14.x (stable ABI).
dependencies = ["h5py>=3.11"]

[project.urls]
Homepage = "https://github.com/ICICLE-ai/ArrayMorph"
Repository = "https://github.com/ICICLE-ai/ArrayMorph"
Issues = "https://github.com/ICICLE-ai/ArrayMorph/issues"

# ---------------------------------------------------------------------------
# cibuildwheel
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
test-command = "python -c 'import arraymorph; print(\"ok\")'"
build-frontend = "pip; args: --no-build-isolation"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

before-all = [
  "dnf install -y epel-release",
  "dnf install -y perl perl-IPC-Cmd ca-certificates patchelf ninja-build gcc-toolset-13-libatomic-devel",
]

before-build = [
  "pip install 'conan>=2,<3' 'h5py>=3.11,<3.13' scikit-build-core setuptools-scm",
  "conan profile detect --force",
  "conan lock create {package}/lib -s build_type=Release --lockfile-out={package}/lib/conan.lock",
  "conan install {package}/lib --lockfile={package}/lib/conan.lock --build=missing -of {package}/lib/build -c tools.system.package_manager:mode=install -c tools.system.package_manager:sudo=True",
]

environment = { CMAKE_TOOLCHAIN_FILE = "/project/lib/build/build/Release/generators/conan_toolchain.cmake", SKBUILD_CMAKE_SOURCE_DIR = "lib" }

# CRITICAL: this MUST be a single string, not an array.
# Array items run as separate shell commands — env vars don't persist across them.
repair-wheel-command = "H5PY_LIBS=$(python -c \"import h5py, os; d=os.path.dirname(h5py.__file__); libs=os.path.join(os.path.dirname(d),'h5py.libs'); print(libs)\") && HDF5_EXCLUDES=$(ls $H5PY_LIBS/libhdf5* 2>/dev/null | xargs -I{} basename {} | sed 's/^/--exclude /' | tr '\\n' ' ') && LD_LIBRARY_PATH=$H5PY_LIBS:$LD_LIBRARY_PATH auditwheel repair {wheel} -w {dest_dir} $HDF5_EXCLUDES"
