[build-system]
requires = ["scikit-build-core>=0.11", "cmake>=3.20", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "arraymorph"
version = "0.2.0"
description = "HDF5 VOL connector for cloud object storage (AWS S3, Azure Blob)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ruochenj123, wangtg2013" }]
requires-python = ">=3.10"

# Important: pin h5py, because this package is intentionally coupled
# to h5py's bundled HDF5 at runtime.
dependencies = ["h5py==3.16.0"]

[project.urls]
Homepage = "https://github.com/ICICLE-ai/ArrayMorph"
Repository = "https://github.com/ICICLE-ai/ArrayMorph"
Issues = "https://github.com/ICICLE-ai/ArrayMorph/issues"

[tool.scikit-build]
cmake.source-dir = "lib"
cmake.build-type = "Release"
cmake.verbose = true
wheel.packages = ["src/arraymorph"]

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
CMAKE_TOOLCHAIN_FILE = { env = "CMAKE_TOOLCHAIN_FILE", default = "" }
H5PY_HDF5_DIR = { env = "H5PY_HDF5_DIR", default = "" }

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
test-command = "python -c \"import arraymorph, h5py; print('arraymorph+h5py imported successfully')\""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-build = """
pip install conan h5py==3.16.0 && \
conan profile detect --force || true && \
cd {package}/lib && conan install . --build=missing -of build
"""
# Do not repair/bundle HDF5 into our wheel.
repair-wheel-command = ""

[tool.cibuildwheel.macos]
before-build = """
pip install conan h5py==3.16.0 && \
conan profile detect --force || true && \
cd {package}/lib && conan install . --build=missing -of build
"""
# Do not delocate HDF5 into our wheel.
repair-wheel-command = ""




